Change ENABLE(FONT_FAST_PATH) to USE(FONT_FAST_PATH) and revert pixel test results back to the state as before r39254.

https://bugs.webkit.org/show_bug.cgi?id=22824

Canonical link: https://commits.webkit.org/31481@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39277 268f45cc-cd09-0410-ab3c-d52691b4dbfc