WebCore/platform/graphics/Font.cpp
@@ -262,7 +262,7 @@ float Font::floatWidth(const TextRun& run, int extraCharsAvailable, int& charsCo
     charsConsumed = run.length();
     glyphName = "";
 
-#if ENABLE(FONT_FAST_PATH)
+#if USE(FONT_FAST_PATH)
     if (canUseGlyphCache(run))
         return floatWidthForSimpleText(run, 0);
 #endif
